[package]
name = "ruins-of-old"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = { version = "0.21.0", optional = true }
